--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
       <a href="#" class='logo'>SD.</a>
       <img src="images/shirley.png" class='avatar'>
       <div class="navbar-links">
-        <a href="#">WORK</a>
+        <a href="work.html">WORK</a>
         <a href="#">CONTACT</a>
       </div>
     </div>
     <!-- <hr> -->
     <div class="container">
-      Hello, I'm <span class="text-pink">Shirley</span>. Right now, I am working as a full-stack web developer at Purr Digital.
+      Hello, I'm <span class="text-pink">Shirley</span>.
+      <br>
+      I develop stuff at Purr Digital.
     </div>
     <!-- <div class="container">
       <div class="text-center sidebar">
