--- a/index.html
+++ b/index.html
@@ -2,104 +2,126 @@
   <head>
     <title>Shirley Deng</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Varela+Roun|Abril+Fatface" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Nunito|Abril+Fatface" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
-    <div class="navbar">
-      <a href="#" class='logo'>SD.</a>
-      <img src="images/shirley.png" class='avatar'>
-      <div class="navbar-links">
-        <a href="work.html">WORK</a>
-        <a href="#">CONTACT</a>
-      </div>
-    </div>
-    <!-- <hr> -->
-    <div class="container">
-      Hello, I'm <span class="text-pink">Shirley</span>.
-      <br>
-      I develop stuff at Purr Digital.
-    </div>
-    <!-- <div class="container">
-      <div class="text-center sidebar">
-        <ul>
-          <li><a href="#about-me"><i class="fas fa-female fa-2x"></i></a></li>
-          <li><a href="#social"><i class="fas fa-plug fa-2x"></i></a></li>
-          <li><a href="#photos"><i class="fas fa-suitcase fa-2x"></i></a></li>
-        </ul>
-      </div>
-      <div class="content">
-        <div class="profile-header">
-          <div class="profile-header-username">
-            <h1>SHIRLEY DENG</h1>
-            <h2>Programmer</h2>
+    <div class="home-container">
+      <div class="nav-bar">
+        <a href="index.html" class='logo'>SD.</a>
+        <div class="nav-bar-links-container">
+          <a href="work.html" class="nav-bar-link">Work</a>
+          <a href="play.html" class="nav-bar-link">Play</a>
+          <div class="links-container">
+            <div>Go on, have a little stalk</div>
+            <div class="mt-1">
+              <a href="https://www.linkedin.com/in/shirleyodeng/" target="_blank"><img src="images/linkedin-logo.png"></a>
+              <a href="https://github.com/shirleyodeng/" target="_blank"><img src="images/github-logo.png"></a>
+              <a href="https://www.instagram.com/__shirleythompson/" target="_blank"><img src="images/instagram-logo.png"></a>
+            </div>
+            <div class="mt-2">Or, just hit me up</div>
+            <div class="mt-1"><a href="mailto:shirleyodeng@gmail.com"><img src="images/email.png"></a></div>
           </div>
         </div>
-
-        <div class="section-white">
-          <div id="about-me">
-            <h2>ABOUT ME</h2>
-            <p>
-              I studied Event Management at university but soon realised it wasn't for me. After a few lengthy gap years travelling, I attended a coding 101 workshop and loved it. I'm hoping my time at Le Wagon will lead me to a career in developing.
-            </p>
-          </div>
-        </div>
-
-        <div class="section-white text-center" id="social">
-          <ul class ="list-inline">
-            <li>
-              <a href="https://www.facebook.com/shirleeeeeeeeeey" target="_blank">
-                <i class="fab fa-facebook-f fa-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/shirleyodeng" target="_blank">
-                <i class="fab fa-github fa-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/__shirleythompson/" target="_blank">
-                <i class="fab fa-instagram fa-2x"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/shirley-deng-a538179b" target="_blank">
-                <i class="fab fa-linkedin-in fa-2x"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="section-white text-center" id="travels">
-          <h2>PHOTOS</h2>
-          <center><table id ="photos">
-            <tr>
-              <td>
-                <img src="images/croatia.JPG" alt="Croatia" class="places-pics">
-              </td>
-              <td>
-                <img src="images/positano.JPG" alt="Positano" class="places-pics">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/sydney.JPG" alt="Sydney" class="places-pics">
-              </td>
-              <td>
-                <img src="images/canada.JPG" alt="Canada" class="places-pics">
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <img src="images/morocco.JPG" alt="Morocco" class="places-pics">
-              </td>
-              <td>
-                <img src="images/iceland.JPG" alt="Iceland" class="places-pics">
-              </td>
-            </tr>
-          </table>
+      </div>
+      <div class="about-container">
+        <img src="images/shirley.png" class='avatar'>
+        <div class="mt-3">
+          Hello, I'm <span class="text-pink">Shirley</span>.
+          <br/>
+          I develop stuff at Purr Digital.
+          <!-- <br/>
+          I am a Le Wagon bootcamp baby. -->
+          <br/>
+          Living in London, originally from Sydney, born in New Zealand.
+          <br/>
         </div>
       </div>
+    </div>
+    <!-- <div id="work" class="container">
+      <div class="header mb-5">
+        WORK
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/mycineplace.png" width="100%">
+        </div>
+        <div class="col-md-6">
+          <div class="work-description">
+            <a href="https://www.mycineplace.com/" target="_blank">MyCineplace</a>
+            <hr>
+            <div class="work-blurb">
+              A platform for all things cinema.
+            </div>
+            <div class="details-link" data-name="mycineplace">Technical details</div>
+          </div>
+        </div>
+      </div>
+      <div class="row details-container" data-name="mycineplace">
+        <div class="col-md-6">
+          <div class="mb-3">Tech Stack</div>
+          <div class="row">
+            <div class="col-md-6">
+              <div>Back End</div>
+              <div>Ruby on Rails</div>
+              <div>PostgreSQL</div>
+              <div>APIs</div>
+            </div>
+            <div class="col-md-6">
+              <div>Front End</div>
+              <div>HTML5/HAML</div>
+              <div>CSS3</div>
+              <div>Bootstrap</div>
+              <div>JavaScript/jQuery</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div>> Implementing a responsive web design</div>
+          <div>> Data integration through external APIs and web scraping</div>
+          <div>> Implementing a responsive web design</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/european-rugby.png" width="100%">
+        </div>
+        <div class="col-md-6">
+          <div class="work-description">
+            European Rugby
+            <hr>
+            <div class="work-blurb">
+              A bespoke platform designed to engage brands with the world's biggest club rugby competitions.
+            </div>
+            <div class="details-link" data-name="european-rugby">Technical details</div>
+          </div>
+        </div>
+      </div>
+      <div class="details-container" data-name="european-rugby">Technical details</div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/gifter.png" width="100%">
+        </div>
+        <div class="col-md-6">
+          <div class="work-description">
+            <a href="https://www.gifter.tech/" target="_blank">Gifter</a>
+            <hr>
+            <div class="work-blurb">
+              A prototype of a web application that makes it easy for parents to
+              start investing in their child's future by crowdfunding towards
+              purposeful gifts and experiences.
+            </div>
+            <div class="details-link" data-name="gifter">Technical details</div>
+          </div>
+        </div>
+      </div>
+      <div class="details-container" data-name="gifter">Technical details</div>
     </div> -->
   </body>
 </html>
