--- a/play.html
+++ b/play.html
@@ -14,10 +14,10 @@
   <body>
     <div class="nav-bar-container">
       <div class="nav-bar">
-        <a href="index.html" class='logo'>SD.</a>
+        <a href="index" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
-          <a href="work.html" class="nav-bar-link">Work</a>
-          <a href="play.html" class="nav-bar-link text-pink">> Play</a>
+          <a href="work" class="nav-bar-link">Work</a>
+          <a href="play" class="nav-bar-link text-pink">> Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
