--- a/work.html
+++ b/work.html
@@ -15,10 +15,10 @@
     <img src="images/arrow.png" class='back-to-top'>
     <div class="nav-bar-container">
       <div class="nav-bar">
-        <a href="index.html" class='logo'>SD.</a>
+        <a href="/" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
-          <a href="work" class="nav-bar-link text-pink">> Work</a>
-          <a href="play" class="nav-bar-link">Play</a>
+          <a href="work.html" class="nav-bar-link text-pink">> Work</a>
+          <a href="play.html" class="nav-bar-link">Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
