--- a/play.html
+++ b/play.html
@@ -16,8 +16,8 @@
       <div class="nav-bar">
         <a href="/" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
-          <a href="work.html" class="nav-bar-link">Work</a>
-          <a href="play.html" class="nav-bar-link text-pink">> Play</a>
+          <a href="work" class="nav-bar-link">Work</a>
+          <a href="play" class="nav-bar-link text-pink">> Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
