--- a/work.html
+++ b/work.html
@@ -17,8 +17,8 @@
       <div class="nav-bar">
         <a href="/" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
-          <a href="work.html" class="nav-bar-link text-pink">> Work</a>
-          <a href="play.html" class="nav-bar-link">Play</a>
+          <a href="work" class="nav-bar-link text-pink">> Work</a>
+          <a href="play" class="nav-bar-link">Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
