--- a/play.html
+++ b/play.html
@@ -2,6 +2,7 @@
   <head>
     <title>Shirley Deng | Play</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Nunito|Abril+Fatface" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
