update to website

--- a/play.html
+++ b/play.html
@@ -13,6 +13,7 @@
     <script src="js/script.js"></script>
   </head>
   <body>
+    <img src="images/arrow.png" class='btt d-none'>
     <div class="nav-bar-container">
       <div class="nav-bar">
         <a href="/" class='logo'>SD.</a>
@@ -33,38 +34,109 @@
       </div>
     </div>
     <div class="container play-container">
-      <div class="row">
-        <div class="col-3 mb-3">
-          <img src="images/morocco.JPG">
-          <div class="mt-2">Sahara Desert, 2016</div>
+      <div class="play-text">
+        If I'm not coding, I'm eating.
+        <br/>
+        If I'm not eating, I'm travelling.
+        <br/>
+      </div>
+      <hr>
+      <div class="row my-5">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/bologna.jpg">
+          <div class="location-text">Bologna, 2018</div>
         </div>
-        <div class="col-3 mb-3">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/lisbon.jpg">
+          <div class="location-text">Lisbon, 2018</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/paris.jpg">
+          <div class="location-text">Paris, 2018</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/brooklyn.jpg">
+          <div class="location-text">Brooklyn Bridge, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/dubai.jpg">
+          <div class="location-text">Dubai, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/croatia.jpg">
+          <div class="location-text">Dubrovnik, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/greenland.jpg">
+          <div class="location-text">Greenland, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/austria.jpg">
+          <div class="location-text">Hallstatt, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/hyams.jpg">
+          <div class="location-text">Hyams Beach, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/iceland.jpg">
+          <div class="location-text">Iceland, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/positano.jpg">
+          <div class="location-text">Positano, 2017</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/canada.jpg">
+          <div class="location-text">Banff, 2016</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/cappadocia.jpg">
+          <div class="location-text">Cappadocia, 2016</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/barcelona.jpg">
+          <div class="location-text">La Sagrada Familia, 2016</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
           <img src="images/turkey.jpg">
-          <div class="mt-2">Pamukkale, 2016</div>
+          <div class="location-text">Pamukkale, 2016</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/positano.JPG">
-          <div class="mt-2">Positano, 2017</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/morocco.jpg">
+          <div class="location-text">Sahara Desert, 2016</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/canada.JPG">
-          <div class="mt-2">Banff, 2016</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/sydney.jpg">
+          <div class="location-text">Sydney, 2016</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/croatia.JPG">
-          <div class="mt-2">Dubrovnik, 2016</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/budapest.jpg">
+          <div class="location-text">Budapest, 2015</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/iceland.JPG">
-          <div class="mt-2">Iceland, 2016</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/hanging-rock.jpg">
+          <div class="location-text">Hanging Rock, 2015</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/sydney.JPG">
-          <div class="mt-2">Sydney, 2016</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/lake-district.jpg">
+          <div class="location-text">Lake District, 2015</div>
         </div>
-        <div class="col-3 mb-3">
-          <img src="images/canada.JPG">
-          <div class="mt-2">Banff, 2016</div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/mount-john.jpg">
+          <div class="location-text">Mount John, 2015</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/trolltunga.jpg">
+          <div class="location-text">Trolltunga, 2015</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/vernazza.jpg">
+          <div class="location-text">Vernazza, 2015</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="images/wedding-cake-rock.jpg">
+          <div class="location-text">Wedding Cake Rock, 2015</div>
         </div>
       </div>
     </div>
