--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     <script src="js/script.js"></script>
   </head>
   <body>
-    <img src="images/arrow.png" class='back-to-top'>
+    <img src="images/arrow.png" class='btt d-none'>
     <div class="nav-bar-container">
       <div class="nav-bar">
         <a href="/" class='logo'>SD.</a>
