--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="about-container">
-        <img src="images/shirley.png" class='avatar'>
+        <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999253/shirleydeng/shirley.png" class='avatar'>
         <div class="mt-3">
           Hello, I'm <span class="text-pink">Shirley</span>.
           <br/>
