--- a/play.html
+++ b/play.html
@@ -43,99 +43,99 @@
       <hr>
       <div class="row my-5">
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/bologna.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999247/shirleydeng/bologna.jpg">
           <div class="location-text">Bologna, 2018</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/lisbon.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999806/lisbon.jpg">
           <div class="location-text">Lisbon, 2018</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/paris.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999907/paris.jpg">
           <div class="location-text">Paris, 2018</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/brooklyn.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999945/brooklyn.jpg">
           <div class="location-text">Brooklyn Bridge, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/dubai.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000044/dubai.jpg">
           <div class="location-text">Dubai, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/croatia.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000025/dubrovnik.jpg">
           <div class="location-text">Dubrovnik, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/greenland.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000009/greenland.jpg">
           <div class="location-text">Greenland, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/austria.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999977/hallstatt.jpg">
           <div class="location-text">Hallstatt, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/hyams.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999962/hyams.jpg">
           <div class="location-text">Hyams Beach, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/iceland.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999255/shirleydeng/iceland.jpg">
           <div class="location-text">Iceland, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/positano.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000061/positano.jpg">
           <div class="location-text">Positano, 2017</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/canada.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000082/banff.jpg">
           <div class="location-text">Banff, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/cappadocia.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999248/shirleydeng/cappadocia.jpg">
           <div class="location-text">Cappadocia, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/barcelona.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999244/shirleydeng/barcelona.jpg">
           <div class="location-text">La Sagrada Familia, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/turkey.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000118/pamukkale.jpg">
           <div class="location-text">Pamukkale, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/morocco.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999254/shirleydeng/morocco.jpg">
           <div class="location-text">Sahara Desert, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/sydney.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999249/shirleydeng/sydney.jpg">
           <div class="location-text">Sydney, 2016</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/budapest.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999246/shirleydeng/budapest.jpg">
           <div class="location-text">Budapest, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/hanging-rock.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999252/shirleydeng/hanging-rock.jpg">
           <div class="location-text">Hanging Rock, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/lake-district.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999254/shirleydeng/lake-district.jpg">
           <div class="location-text">Lake District, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/mount-john.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999254/shirleydeng/mount-john.jpg">
           <div class="location-text">Mount John, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/trolltunga.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999249/shirleydeng/trolltunga.jpg">
           <div class="location-text">Trolltunga, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/vernazza.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1552000133/vernazza.jpg">
           <div class="location-text">Vernazza, 2015</div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
-          <img src="images/wedding-cake-rock.jpg">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999252/shirleydeng/wedding-cake-rock.jpg">
           <div class="location-text">Wedding Cake Rock, 2015</div>
         </div>
       </div>
