changes to work page

--- a/play.html
+++ b/play.html
@@ -34,13 +34,13 @@
       </div>
     </div>
     <div class="container play-container">
-      <div class="play-text">
+      <div>
         If I'm not coding, I'm eating.
         <br/>
         If I'm not eating, I'm travelling.
         <br/>
       </div>
-      <hr>
+      <hr class="pink-hr">
       <div class="row my-5">
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
           <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999247/shirleydeng/bologna.jpg">
