--- a/work.html
+++ b/work.html
@@ -33,81 +33,35 @@
         </div>
       </div>
     </div>
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/mycineplace.png" width="100%">
+    <div class="container work-container">
+      <div class="projects">
+        <div>
+          Full stack web developer
+          <br/>
+          Specialising in back-end development
+          <br/>
         </div>
-        <div class="col-md-6">
-          <div class="work-description">
-            <a href="https://www.mycineplace.com/" target="_blank">MyCineplace</a>
-            <hr>
-            <div class="work-blurb">
-              A platform for all things cinema.
-            </div>
-            <div class="details-link" data-name="mycineplace">Technical details</div>
+        <hr class="pink-hr">
+        <div class="project-link">European Rugby</div>
+        <div class="project-link">Gifter</div>
+        <div class="project-link">MyCineplace</div>
+      </div>
+      <div class="project-container d-none">
+        <div class="row">
+          <div class="col-md-6 offset-md-3">
+            <div class="project-close">x</div>
+            <div class="project-title"></div>
+            <hr class="pink-hr">
+            <img src="" class="project-image">
+            <div class="project-blurb"></div>
+            <hr class="pink-hr">
+            Tech Stack
+            <div class="row project-stack"></div>
+            <hr class="pink-hr">
+            <div class="project-spec"></div>
           </div>
         </div>
       </div>
-      <div class="row details-container" data-name="mycineplace">
-        <div class="col-md-6">
-          <div class="mb-3">Tech Stack</div>
-          <div class="row">
-            <div class="col-md-6">
-              <div>Back End</div>
-              <div>Ruby on Rails</div>
-              <div>PostgreSQL</div>
-              <div>APIs</div>
-            </div>
-            <div class="col-md-6">
-              <div>Front End</div>
-              <div>HTML5/HAML</div>
-              <div>CSS3</div>
-              <div>Bootstrap</div>
-              <div>JavaScript/jQuery</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div>> Implementing a responsive web design</div>
-          <div>> Data integration through external APIs and web scraping</div>
-          <div>> Implementing a responsive web design</div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/european-rugby.png" width="100%">
-        </div>
-        <div class="col-md-6">
-          <div class="work-description">
-            European Rugby
-            <hr>
-            <div class="work-blurb">
-              A bespoke platform designed to engage brands with the world's biggest club rugby competitions.
-            </div>
-            <div class="details-link" data-name="european-rugby">Technical details</div>
-          </div>
-        </div>
-      </div>
-      <div class="details-container" data-name="european-rugby">Technical details</div>
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/gifter.png" width="100%">
-        </div>
-        <div class="col-md-6">
-          <div class="work-description">
-            <a href="https://www.gifter.tech/" target="_blank">Gifter</a>
-            <hr>
-            <div class="work-blurb">
-              A prototype of a web application that makes it easy for parents to
-              start investing in their child's future by crowdfunding towards
-              purposeful gifts and experiences.
-            </div>
-            <div class="details-link" data-name="gifter">Technical details</div>
-          </div>
-        </div>
-      </div>
-      <div class="details-container" data-name="gifter">Technical details</div>
     </div>
   </body>
 </html>
