--- a/play.html
+++ b/play.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Nunito|Abril+Fatface" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Abril+Fatface" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136379004-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-136379004-1');
+    </script>
   </head>
   <body>
     <img src="images/arrow.png" class='btt d-none'>
@@ -27,8 +34,8 @@
               <a href="https://github.com/shirleyodeng/" target="_blank"><img src="images/github-logo.png"></a>
               <a href="https://www.instagram.com/__shirleythompson/" target="_blank"><img src="images/instagram-logo.png"></a>
             </div>
-            <div class="mt-2">Or, just hit me up</div>
-            <div class="mt-1"><a href="mailto:shirleyodeng@gmail.com"><img src="images/email.png"></a></div>
+            <div class="mt-2">Or, say hello!</div>
+            <div class="mt-1"><a href="mailto:hello@shirleydeng.com"><img src="images/email.png"></a></div>
           </div>
         </div>
       </div>
@@ -40,6 +47,13 @@
         If I'm not eating, I'm travelling.
         <br/>
       </div>
+      <!-- <div>
+        Next trip
+        <span class="counter-time" data="day"></span>
+        <span class="counter-time" data="hour"></span>
+        <span class="counter-time" data="min"></span>
+        <span class="counter-time" data="sec"></span>
+      </div> -->
       <hr class="pink-hr">
       <div class="row my-5">
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
