--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           I develop stuff at Purr Digital.
           <br/>
           I am a product of Le Wagon.
-          <br/>
-          Living in London, originally from Sydney, born in NZ.
-          <br/>
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="mr-1" src="images/pin.png" alt="pin" height="20px"> London
+          </div>
         </div>
       </div>
     </div>
