--- a/work.html
+++ b/work.html
@@ -43,20 +43,34 @@
     <div class="container work-container">
       <div class="projects">
         <div>
-          Full stack web developer
+          Full stack web development
           <br/>
-          Specialising in back-end development
+          Specialising in back-end
           <br/>
         </div>
         <hr class="pink-hr">
-        <div class="project-link">European Rugby</div>
-        <div class="project-link">Gifter</div>
-        <div class="project-link">MyCineplace</div>
+        <div class="project-webpages">
+          <div class="project-webpage">
+            <a href="#" class="project-link" data-name="European Rugby"></a>
+            <img src="images/er-webpage.png" alt="European Rugby">
+            <div class="project-name">European<br/>Rugby</div>
+          </div>
+          <div class="project-webpage">
+            <a href="#" class="project-link" data-name="Gifter"></a>
+            <img src="images/gifter-webpage.png" alt="Gifter">
+            <div class="project-name">Gifter</div>
+          </div>
+          <div class="project-webpage">
+            <a href="#" class="project-link" data-name="MyCineplace"></a>
+            <img src="images/mycineplace-webpage.png" alt="MyCineplace">
+            <div class="project-name">MyCineplace</div>
+          </div>
+        </div>
       </div>
       <div class="project-container d-none">
         <div class="row">
           <div class="col-md-6 offset-md-3">
-            <div class="project-close"><img src="images/back-arrow.png"></div>
+            <div class="project-close"><img src="images/back-arrow.png" width="20px"></div>
             <div class="project-title"></div>
             <hr class="pink-hr">
             <img src="" class="project-image">
