--- a/work.html
+++ b/work.html
@@ -3,7 +3,9 @@
     <title>Shirley Deng | Work</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <!-- <link rel="shortcut icon" type="image/png" href="images/favicon.png"/> -->
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Abril+Fatface" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -52,17 +54,17 @@
         <div class="project-webpages">
           <div class="project-webpage">
             <a href="#" class="project-link" data-name="European Rugby"></a>
-            <img src="images/er-webpage.png" alt="European Rugby">
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/er-webpage.png" alt="European Rugby">
             <div class="project-name">European<br/>Rugby</div>
           </div>
           <div class="project-webpage">
             <a href="#" class="project-link" data-name="Gifter"></a>
-            <img src="images/gifter-webpage.png" alt="Gifter">
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/gifter-webpage.png" alt="Gifter">
             <div class="project-name">Gifter</div>
           </div>
           <div class="project-webpage">
             <a href="#" class="project-link" data-name="MyCineplace"></a>
-            <img src="images/mycineplace-webpage.png" alt="MyCineplace">
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/mycineplace-webpage.png" alt="MyCineplace">
             <div class="project-name">MyCineplace</div>
           </div>
         </div>
