new work projects

--- a/work.html
+++ b/work.html
@@ -67,6 +67,16 @@
             <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/mycineplace-webpage.png" alt="MyCineplace">
             <div class="project-name">MyCineplace</div>
           </div>
+          <div class="project-webpage">
+            <a href="#" class="project-link" data-name="Web App"></a>
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553548267/shirleydeng/wip-webpage.png" alt="Web App">
+            <div class="project-name">Web App<br/>(WIP)</div>
+          </div>
+          <div class="project-webpage">
+            <a href="#" class="project-link" data-name="Mobile App"></a>
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553548267/shirleydeng/wip-webpage.png" alt="Mobile App">
+            <div class="project-name">Mobile App<br/>(WIP)</div>
+          </div>
         </div>
       </div>
       <div class="project-container d-none">
@@ -74,8 +84,9 @@
           <div class="col-md-6 offset-md-3">
             <div class="project-close"><img src="images/back-arrow.png" width="20px"></div>
             <div class="project-title"></div>
+            <div class="project-subheading"></div>
             <hr class="pink-hr">
-            <img src="" class="project-image">
+            <div class="project-image-container"></div>
             <div class="project-blurb"></div>
             <hr class="pink-hr">
             <div class="row project-stack"></div>
