--- a/play.html
+++ b/play.html
@@ -48,6 +48,7 @@
         <br/>
         If I'm not eating, I'm travelling.
         <br/>
+        <div class="location-text">Next up > Amsterdam</div>
       </div>
       <hr class="pink-hr">
       <div class="row my-5">
