nav bar link text colour change

--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
       <div class="nav-bar">
         <a href="/" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
-          <a href="work" class="nav-bar-link text-pink">> Work</a>
+          <a href="work" class="nav-bar-link">> Work</a>
           <a href="play" class="nav-bar-link">Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
