--- a/play.html
+++ b/play.html
@@ -28,7 +28,7 @@
         <a href="/" class='logo'>SD.</a>
         <div class="nav-bar-links-container">
           <a href="work" class="nav-bar-link">Work</a>
-          <a href="play" class="nav-bar-link text-pink">> Play</a>
+          <a href="play" class="nav-bar-link">> Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
