--- a/work.html
+++ b/work.html
@@ -53,6 +53,11 @@
         <hr class="pink-hr">
         <div class="project-webpages">
           <div class="project-webpage">
+            <a href="#" class="project-link" data-name="AdPlan"></a>
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1556574435/shirleydeng/adplan-webpage.png" alt="AdPlan">
+            <div class="project-name">AdPlan (WIP)</div>
+          </div>
+          <div class="project-webpage">
             <a href="#" class="project-link" data-name="European Rugby"></a>
             <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/er-webpage.png" alt="European Rugby">
             <div class="project-name">European<br/>Rugby</div>
@@ -66,11 +71,6 @@
             <a href="#" class="project-link" data-name="MyCineplace"></a>
             <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/mycineplace-webpage.png" alt="MyCineplace">
             <div class="project-name">MyCineplace</div>
-          </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="Web App"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553548267/shirleydeng/wip-webpage.png" alt="Web App">
-            <div class="project-name">Web App<br/>(WIP)</div>
           </div>
           <div class="project-webpage">
             <a href="#" class="project-link" data-name="Mobile App"></a>
