--- a/work.html
+++ b/work.html
@@ -58,6 +58,11 @@
             <div class="project-name">AdPlan (WIP)</div>
           </div>
           <div class="project-webpage">
+            <a href="#" class="project-link" data-name="Endo"></a>
+            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1556642165/shirleydeng/endo-webpage.png" alt="Mobile App">
+            <div class="project-name">Endo at<br/>the Rotunda</div>
+          </div>
+          <div class="project-webpage">
             <a href="#" class="project-link" data-name="European Rugby"></a>
             <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/er-webpage.png" alt="European Rugby">
             <div class="project-name">European<br/>Rugby</div>
@@ -71,11 +76,6 @@
             <a href="#" class="project-link" data-name="MyCineplace"></a>
             <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/mycineplace-webpage.png" alt="MyCineplace">
             <div class="project-name">MyCineplace</div>
-          </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="Mobile App"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553548267/shirleydeng/wip-webpage.png" alt="Mobile App">
-            <div class="project-name">Mobile App<br/>(WIP)</div>
           </div>
         </div>
       </div>
