--- a/play.html
+++ b/play.html
@@ -48,7 +48,7 @@
         <br/>
         If I'm not eating, I'm travelling.
         <br/>
-        <div class="location-text">Next up > Amsterdam</div>
+        <div class="location-text">Next up > an Italian summer</div>
       </div>
       <hr class="pink-hr">
       <div class="row my-5">
