work place name change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="mt-3">
           Hello, I'm <span class="text-pink">Shirley</span>.
           <br/>
-          I develop stuff at Purr Digital.
+          I develop stuff at Lavanda.
           <br/>
           I am a product of Le Wagon.
           <div class="d-flex justify-content-center align-items-center">
