Add new images to play page

--- a/play.html
+++ b/play.html
@@ -48,10 +48,22 @@
         <br/>
         If I'm not eating, I'm travelling.
         <br/>
-        <div class="location-text">Next up > an Italian summer</div>
+        <div class="location-text">Next up > South Korea + Japan</div>
       </div>
       <hr class="pink-hr">
       <div class="row my-5">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/a_exif/v1566417316/shirleydeng/sardinia.jpg">
+          <div class="location-text">Sardinia, 2019</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1566417325/shirleydeng/seven-sisters.jpg">
+          <div class="location-text">Seven Sisters, 2019</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1566417335/shirleydeng/sicily.jpg">
+          <div class="location-text">Sicily, 2019</div>
+        </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
           <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1551999247/shirleydeng/bologna.jpg">
           <div class="location-text">Bologna, 2018</div>
