--- a/work.html
+++ b/work.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/en-gb.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136379004-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
